test_suite/tests/ui/integer/visibility/inner_field.rs
use nutype::nutype;

#[nutype]
struct Cents(pub i64);

fn main() {}
